--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,48 @@
 Makefile
 Makefile.in
-config.*
+aclocal.m4
+build-stamp
+config.cache
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
 configure
+libdbf.spec
+libtool
+ltmain.sh
+*.la
+*.lo
+libdbf-*.tar.gz
+stamp-h
+stamp-h.in
+intl
+.libs
+.debs
+ABOUT-NLS
 intltool*
+libdbf.pc
+install-sh
+stamp-h1
 missing
 mkinstalldirs
-stamp-h1
-build-stamp
-aclocal.m4
 depcomp
-install-sh
-dbf.spec
-libtool
-stamp-h*
 .project
 .cvsignore
 CVS/
+po/Makefile
+po/Makefile.in
+po/*.gmo
 po/POTFILES
-src/.deps/
-src/*.o
+po/libdbf.pot
 src/libdbf
+src/.deps
+src/.libs
+src/Makefile
+src/Makefile.in
+src/*.lo
+src/*.la
+src/*.so
+src/*.o
